# PomoTask

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
app/: PomoTaskApp.cpp  PomoTaskApp.h  main.cpp
src/Database/: Database.cpp  Database.h
src/Effect/: Effect.cpp  Effect.h  MatrixEffect.cpp  MatrixEffect.h  RainEffect.cpp  RainEffect.h
src/Pomodoro/: CMakeLists.txt  Pomodoro.cpp  Pomodoro.h
src/Pomodoro/include/: Effect.h  MatrixEffect.h  Pomodoro.h  RainEffect.h
src/Pomodoro/src/: Effect.cpp  MatrixEffect.cpp  Pomodoro.cpp  RainEffect.cpp
src/Pomodoro/tests/: UnitTest_Effect.cpp
src/ToDo/: CMakeLists.txt  ToDo.cpp  ToDo.h  ToDoList.cpp  ToDoList.h
src/ToDo/include/: Database.h  ToDo.h  ToDoList.h
src/ToDo/src/: Database.cpp  ToDoList.cpp
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/effect/: Effect.cpp  Effect.h  MatrixEffect.cpp  MatrixEffect.h  RainEffect.h
tests/: AllTests.cpp  UnitTest_Database.cpp  UnitTest_Effect.cpp  UnitTest_Pomodoro.cpp  UnitTest_ToDo.cpp
